# afs

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLEANUP_README.md  CONTINUOUS_LEARNING_SUMMARY.md  CONTRIBUTING.md  COST_SYSTEM_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  HEALTH_SYSTEM_IMPLEMENTATION.md  INDEX.md  LICENSE  LMSTUDIO_SETUP.md  MERGE_REPORT.md  Makefile  NOTIFICATIONS_README.md  PROJECT.toml  QUALITY_IMPLEMENTATION.md  QUICKSTART_COMPARISON.md  README.md  README_COMPARISON.md  RELEASE.md  REPO_FACTS.json  ROADMAP.md  SECURITY.md  SESSION_STATUS.md  TRAINING_SESSION_SUMMARY.md  chat_agent.py  lmstudio_client.py  merge_datasets.py  mkdocs.yml  pyproject.toml  pytest.ini  serve_agents.py
.cartograph/: tutorials.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: branch-policy.yml  ci.yml  release.yml
apps/: studio
apps/studio/: CMakeLists.txt  README.md
benchmark_results/: report.md  results_gemini-flash-test_20260103_225852.json  results_gemini-flash-test_20260103_231604.json
benchmarks/: metadata.json
benchmarks/din/: benchmark.jsonl
benchmarks/farore/: benchmark.jsonl
benchmarks/nayru/: benchmark.jsonl
benchmarks/veran/: benchmark.jsonl
configs/: agent_manifest.toml  moe_merge.yaml
contrib/emacs/: afs-emacs.el
dashboard/: INDEX.md  MANIFEST.md  QUICKSTART.md  README.md  TECHNICAL.md  TESTING.md  api.py  app.js  index.html  serve.sh  styles.css
distillation_data/: checkpoint.jsonl  train_alpaca.jsonl  train_chatml.jsonl  train_chatml_test.jsonl
docker/: Dockerfile.gateway  docker-compose.halext-nj.yml  docker-compose.simple.yml  docker-compose.yml
docs/: AFS_GLOBAL_CONTEXT_ANALYSIS.md  AGENT_INTEGRATION_UPGRADE.md  AGENT_OPERATIONS.md  AGENT_SURFACES.md  ANTIGRAVITY_CLI.md  ARCHITECTURE.md  CLEANUP_README.md  CLI_PLAN.md  CLI_REFERENCE.md  COMPARISON_FRAMEWORK.md  CONTEXT_LAYOUT_V2.md  CONTEXT_SOURCES.md  CONTINUOUS_LEARNING.md  CONTINUOUS_LEARNING_FILES.md  CONTINUOUS_LEARNING_QUICKSTART.md  CORTEX_INTEGRATION.md  COST_OPTIMIZATION.md  DEPLOYMENT_INTEGRATION.md  DEPLOYMENT_VALIDATOR.md  EMACS_INTEGRATION.md  EMBEDDINGS.md  ENGAGEMENT.md  ENGINEERING_PRACTICES.md  EVALUATION_GUIDE.md  EVALUATION_SETUP_COMPLETE.md  EVENT_REACTOR.md  EXECUTION_BROKER.md  EXECUTIVE_SUMMARY.md  EXTENSION_AUTHORING.md  EXTENSION_MIGRATION.md  GATES_INTEGRATION.md  GATES_QUICK_REFERENCE.md  GATEWAY_API.md  GEMINI_WORKFLOW_ROADMAP.md  GGUF_CONVERSION.md  GLOSSARY.md  HANDS_ON_GUIDE.md  HEALTH_QUICK_START.md  HEALTH_SYSTEM_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  (+54 more)
docs/audit_reports/: 2026-01-17-moe-setup.md
docs/examples/: training_run.example.toml
docs/reports/: COMPARISON_FRAMEWORK_SUMMARY.md  CONTINUOUS_LEARNING_SUMMARY.md  COST_SYSTEM_SUMMARY.md  DEPLOYMENT_VALIDATOR_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FRAMEWORK_DELIVERABLES.txt  MERGE_REPORT.md  SESSION_STATUS.md  STATUS.md  TRAINING_SESSION_SUMMARY.md
evaluations/: majora_v1_oracle_eval.jsonl
examples/: README.md  claude_orchestrator_demo.py  comparison_tutorial.py  context_quickstart.py  continuous_learning_demo.py  cost_optimization_example.py  deployment_validation_example.py  embedding_eval.jsonl  health_check_example.py  notification_example.py  quality_analysis_example.py  quality_gates_example.py  registry_demo.py  train_asm_encoder.py
examples/extension_hello_world/: README.md  extension.toml
examples/optimization_gate/: README.md  baseline.json  candidate.json  policy.json
examples/plugin_skeleton/: README.md
extensions/: README.md
extensions/afs_google/: extension.toml
extensions/vscode-afs/: package.json  (+1 more)
generated_data/: din_test.jsonl  din_training.jsonl  test_din.jsonl
models/: din-v3-fewshot.Modelfile  din-v3.Modelfile  din-v4.Modelfile  din_combined_training.jsonl  din_optimization_training.jsonl  din_optimization_training_v2.jsonl  farore_debugging_training.jsonl  train_validated_cleaned.jsonl  veran_combined_training.jsonl  veran_combined_v2.jsonl  veran_eval_results.json  veran_explanation_training.jsonl  veran_register_emphasis.jsonl  veran_snes_hardware.jsonl  veran_snes_hardware_v2.jsonl
pilot_output/: checkpoint.jsonl
scripts/: ARCHITECTURE.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  TRAINING_MONITOR_DESIGN.md  TRAINING_MONITOR_QUICKSTART.md  TRAINING_MONITOR_README.md  TRAINING_MONITOR_SUMMARY.md  afs  afs-agent-hooks.sh  afs-antigravity  afs-check  afs-client-session  afs-hcode  afs-manager  afs-manager.command  afs-session-notify  afs-session-verify  afs-shell-init.sh  afs-supervisor-ctl  afs-upgrade-agent-setup  afs-venv  afs-warm  afs-work-approval-echo.py  afs-work-gws-executor.py  afs-z3cli  afs-z3cli-exec  build_rehearsal_buffer.py  check_release.py  cleanup_disk.sh  com.halext.afs-supervisor.plist  compare_models.py  continuous_loop.py  cost_report.py  create_tooluse_dataset.py  deploy_pipeline.sh  deploy_to_lmstudio.sh  deployment_config.yaml  download_from_vastai.py  (+35 more)
tests/: conftest.py  test_agent_capabilities.py  test_agent_context.py  test_agent_context_enrichment.py  test_agent_defaults.py  test_agent_harness.py  test_agent_hooks.py  test_agent_insights.py  test_agent_job_inbox.py  test_agent_job_seeds.py  test_agent_job_status.py  test_agent_job_worker.py  test_agent_jobs.py  test_agent_manifest.py  test_agent_manifest_sync.py  test_agent_registry.py  test_agent_research.py  test_agent_runs.py  test_agent_scope.py  test_agent_supervisor.py  test_agent_tools.py  test_agent_training_hooks.py  test_agents_extensions.py  test_antigravity_export.py  test_artifacts.py  test_asm_augment.py  test_atomic_io.py  test_benchmarks.py  test_bundler.py  test_calibration.py  test_claude_export.py  test_claude_integration.py  test_claude_session_report.py  test_cli_agent_ops.py  test_cli_agents.py  test_cli_antigravity.py  test_cli_approvals.py  test_cli_briefing.py  test_cli_claude.py  test_cli_claude_hook.py  (+138 more)
tools/: generate_debugging_samples.py  moe_orchestrator.py  orchestrator.py  query_file.py  task_watcher.py
(+1331 files in other folders)
