[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afs"
version = "0.2.0"
description = "Agentic File System core context platform for agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "scawful"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tomlkit>=0.13.2",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
embeddings = [
    "httpx>=0.24.0",
]
gemini = [
    "google-genai>=1.0.0",
]
training = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0,<2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "build>=1.2.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0,<9.7.0",
    "pymdown-extensions>=10.7",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
afs = "afs.cli:main"

[project.urls]
Homepage = "https://github.com/scawful/afs"
Repository = "https://github.com/scawful/afs"
Issues = "https://github.com/scawful/afs/issues"
Changelog = "https://github.com/scawful/afs/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"afs.protocols.optimization.v1" = ["*.json"]
"afs.protocols.execution.v1" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.10"
exclude = [
    "^build/",
    "^dist/",
    "^site/",
    "^llama\\.cpp/",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trl.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
