[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "afs"
version = "0.2.0"
description = "Agentic File System core context platform for agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "scawful"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "tomlkit>=0.13.2",
    "httpx>=0.24.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
embeddings = [
    "httpx>=0.24.0",
]
gemini = [
    "google-genai>=1.0.0",
]
training = [
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "trl>=0.7.0",
    "peft>=0.6.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.1.0",
]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0,<2.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "build>=1.2.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0,<9.7.0",
    "pymdown-extensions>=10.7",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.scripts]
afs = "afs.cli:main"

[project.urls]
Homepage = "https://github.com/scawful/afs"
Repository = "https://github.com/scawful/afs"
Issues = "https://github.com/scawful/afs/issues"
Changelog = "https://github.com/scawful/afs/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"afs" = ["bundled_skills/*/SKILL.md"]
"afs.protocols.optimization.v1" = ["*.json"]
"afs.protocols.execution.v1" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "BLE001", "S110", "S112"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["B011"]
# --- Exception-hygiene ratchet baseline ---------------------------------
# BLE001 blind-except / S110 try-except-pass / S112 try-except-continue.
# Generated 2026-07-17 with ruff 0.15.20 (pinned in CI). Files below are
# grandfathered with their pre-existing violations; every file NOT listed
# (including all new files) is fully enforced.
# Contract: never add an entry. When touching a listed file, fix its
# violations and delete its line. See docs/ENGINEERING_PRACTICES.md.
# Verify a shrink with: ruff check src/ tests/ --select BLE001,S110,S112
"src/afs/agent/harness.py" = ["BLE001"]
"src/afs/agent/hooks.py" = ["BLE001"]
"src/afs/agent/tools.py" = ["BLE001"]
"src/afs/agent_context.py" = ["BLE001", "S110"]
"src/afs/agent_job_worker.py" = ["BLE001"]
"src/afs/agent_manifest_sync.py" = ["BLE001"]
"src/afs/agent_registry.py" = ["BLE001", "S110"]
"src/afs/agents/__init__.py" = ["BLE001"]
"src/afs/agents/base.py" = ["BLE001"]
"src/afs/agents/context_warm.py" = ["BLE001", "S110"]
"src/afs/agents/dashboard_export.py" = ["BLE001", "S112"]
"src/afs/agents/gemini_workspace_brief.py" = ["BLE001"]
"src/afs/agents/llm_bridge.py" = ["BLE001"]
"src/afs/agents/mission_runner.py" = ["BLE001"]
"src/afs/agents/researcher.py" = ["BLE001"]
"src/afs/agents/supervisor.py" = ["BLE001", "S110"]
"src/afs/agents/tether_bridge.py" = ["BLE001"]
"src/afs/benchmark/__init__.py" = ["BLE001", "S110"]
"src/afs/benchmark/base.py" = ["BLE001"]
"src/afs/benchmark/suite.py" = ["BLE001", "S110"]
"src/afs/benchmarks/quality.py" = ["BLE001"]
"src/afs/benchmarks/resources.py" = ["BLE001"]
"src/afs/bundler.py" = ["BLE001", "S112"]
"src/afs/calibration.py" = ["BLE001", "S110"]
"src/afs/cli/__init__.py" = ["BLE001", "S110"]
"src/afs/cli/_help.py" = ["BLE001"]
"src/afs/cli/_utils.py" = ["BLE001"]
"src/afs/cli/briefing.py" = ["BLE001"]
"src/afs/cli/bundle.py" = ["BLE001"]
"src/afs/cli/claude.py" = ["BLE001"]
"src/afs/cli/comparison.py" = ["BLE001"]
"src/afs/cli/core.py" = ["BLE001", "S110"]
"src/afs/cli/gemini.py" = ["BLE001", "S110"]
"src/afs/cli/optimize.py" = ["BLE001"]
"src/afs/cli/personal.py" = ["BLE001"]
"src/afs/cli/skills.py" = ["BLE001"]
"src/afs/cli/sources.py" = ["BLE001"]
"src/afs/cli/watch.py" = ["BLE001", "S110", "S112"]
"src/afs/codebase_index.py" = ["BLE001"]
"src/afs/comparison/framework.py" = ["BLE001"]
"src/afs/config.py" = ["BLE001"]
"src/afs/context_freshness.py" = ["BLE001", "S112"]
"src/afs/context_fs.py" = ["BLE001"]
"src/afs/context_index.py" = ["BLE001", "S112"]
"src/afs/deployment/cli.py" = ["BLE001", "S110"]
"src/afs/deployment/validator.py" = ["BLE001"]
"src/afs/diagnostics.py" = ["BLE001"]
"src/afs/discovery.py" = ["BLE001", "S112"]
"src/afs/embeddings.py" = ["BLE001", "S110"]
"src/afs/evaluation/semantic_eval.py" = ["BLE001"]
"src/afs/extensions.py" = ["BLE001"]
"src/afs/gateway/backends.py" = ["BLE001"]
"src/afs/generators/__init__.py" = ["BLE001", "S110"]
"src/afs/generators/cot/generator.py" = ["BLE001"]
"src/afs/generators/data_cleaner.py" = ["BLE001"]
"src/afs/generators/model_generator.py" = ["BLE001"]
"src/afs/grounding_hooks.py" = ["BLE001"]
"src/afs/gws.py" = ["BLE001", "S110"]
"src/afs/handoff.py" = ["BLE001", "S110"]
"src/afs/health/afs_status.py" = ["BLE001"]
"src/afs/health/cli.py" = ["BLE001"]
"src/afs/health/daemon.py" = ["BLE001"]
"src/afs/health/enhanced_checks.py" = ["BLE001", "S110"]
"src/afs/history.py" = ["BLE001"]
"src/afs/hivemind.py" = ["BLE001", "S110"]
"src/afs/knowledge/__init__.py" = ["BLE001", "S110"]
"src/afs/knowledge/graph_core.py" = ["BLE001"]
"src/afs/llm_memory.py" = ["BLE001"]
"src/afs/manager.py" = ["BLE001"]
"src/afs/manager_gui.py" = ["BLE001"]
"src/afs/mcp/registry.py" = ["BLE001", "S110"]
"src/afs/mcp_server.py" = ["BLE001", "S110", "S112"]
"src/afs/memory_consolidation.py" = ["BLE001", "S110"]
"src/afs/missions.py" = ["BLE001", "S110"]
"src/afs/model_prompts.py" = ["BLE001"]
"src/afs/next_action.py" = ["BLE001"]
"src/afs/notifications/desktop.py" = ["BLE001"]
"src/afs/notifications/discord.py" = ["BLE001"]
"src/afs/notifications/email.py" = ["BLE001"]
"src/afs/notifications/slack.py" = ["BLE001"]
"src/afs/plugins.py" = ["BLE001"]
"src/afs/pretraining/corpus_builder.py" = ["BLE001"]
"src/afs/registry/cli.py" = ["BLE001"]
"src/afs/services/manager.py" = ["BLE001", "S110"]
"src/afs/session_bootstrap.py" = ["BLE001", "S110"]
"src/afs/session_harness.py" = ["BLE001"]
"src/afs/sources/registry.py" = ["BLE001", "S112"]
"src/afs/workspace_sync.py" = ["BLE001"]
"tests/test_agent_jobs.py" = ["BLE001"]

[tool.mypy]
python_version = "3.10"
exclude = [
    "^build/",
    "^dist/",
    "^site/",
    "^llama\\.cpp/",
]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "trl.*"
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
